--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.serenity]
+features = ["framework", "standard_framework", "rustls_backend", "collector"]
+version = "0.11.2"
+
 [dependencies]
-serenity = "0.11.2"
 tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "macros"] }
 dotenv = "0.15.0"
